--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,15 @@ version: 1.0.2
 homepage: https://www.zkoss.org
 repository: https://github.com/rikulo/socket.io-client-dart
 issue_tracker: https://github.com/rikulo/socket.io-client-dart/issues
+publish_to: 'none'
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  socket_io_common: '^1.0.0'
+  socket_io_common_v2:
+    git:
+      url: https://github.com/GatchHQ/socket_io_common_v2
   js: '^0.6.3'
   logging: '^1.0.1'
 
